tests/baselines/reference/reactDefaultPropsInferenceSuccess.errors.txt
tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx(27,21): error TS2755: No overload matches this call.
tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx(43,22): error TS2755: No overload matches this call.
tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx(64,21): error TS2755: No overload matches this call.


==== tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx (3 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from 'react';
    
    interface BaseProps {
      when?: ((value: string) => boolean) | "a" | "b";
      error?: boolean;
    }
    
    interface Props extends BaseProps {
    }
    
    class FieldFeedback<P extends Props = BaseProps> extends React.Component<P> {
      static defaultProps = {
        when: () => true
      };
    
      render() {
        return <div>Hello</div>;
      }
    }
    
    // OK
    const Test1 = () => <FieldFeedback when={value => !!value} />;
    
    // Error: Void not assignable to boolean
    const Test2 = () => <FieldFeedback when={value => console.log(value)} />;
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2755: No overload matches this call.
!!! related TS2760 tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx:27:36: Overload 1 of 2, '(props: Readonly<Props>): FieldFeedback<Props>', gave the following error.
  Type '(value: string) => void' is not assignable to type '"a" | "b" | ((value: string) => boolean) | undefined'.
    Type '(value: string) => void' is not assignable to type '(value: string) => boolean'.
      Type 'void' is not assignable to type 'boolean'.
!!! related TS2760 tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx:27:36: Overload 2 of 2, '(props: Props, context?: any): FieldFeedback<Props>', gave the following error.
  Type '(value: string) => void' is not assignable to type '"a" | "b" | ((value: string) => boolean) | undefined'.
    Type '(value: string) => void' is not assignable to type '(value: string) => boolean'.
    
    class FieldFeedbackBeta<P extends Props = BaseProps> extends React.Component<P> {
      static defaultProps: BaseProps = {
        when: () => true
      };
    
      render() {
        return <div>Hello</div>;
      }
    }
    
    // OK
    const Test1a = () => <FieldFeedbackBeta when={value => !!value} error>Hah</FieldFeedbackBeta>;
    
    // Error: Void not assignable to boolean
    const Test2a = () => <FieldFeedbackBeta when={value => console.log(value)} error>Hah</FieldFeedbackBeta>;
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2755: No overload matches this call.
!!! related TS2760 tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx:43:41: Overload 1 of 2, '(props: Readonly<Props>): FieldFeedbackBeta<Props>', gave the following error.
  Type '(value: string) => void' is not assignable to type '"a" | "b" | ((value: string) => boolean) | undefined'.
    Type '(value: string) => void' is not assignable to type '(value: string) => boolean'.
      Type 'void' is not assignable to type 'boolean'.
!!! related TS2760 tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx:43:41: Overload 2 of 2, '(props: Props, context?: any): FieldFeedbackBeta<Props>', gave the following error.
  Type '(value: string) => void' is not assignable to type '"a" | "b" | ((value: string) => boolean) | undefined'.
    Type '(value: string) => void' is not assignable to type '(value: string) => boolean'.
    
    interface MyPropsProps extends Props {
      when: (value: string) => boolean;
    }
    
    class FieldFeedback2<P extends MyPropsProps = MyPropsProps> extends FieldFeedback<P> {
      static defaultProps = {
        when: () => true
      };
    
      render() {
        this.props.when("now"); // OK, always defined
        return <div>Hello</div>;
      }
    }
    
    // OK
    const Test3 = () => <FieldFeedback2 when={value => !!value} />;
    
    // Error: Void not assignable to boolean
    const Test4 = () => <FieldFeedback2 when={value => console.log(value)} />;
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2755: No overload matches this call.
!!! related TS2760 tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx:64:37: Overload 1 of 2, '(props: Readonly<MyPropsProps>): FieldFeedback2<MyPropsProps>', gave the following error.
  Type '(value: string) => void' is not assignable to type '(value: string) => boolean'.
    Type 'void' is not assignable to type 'boolean'.
!!! related TS2760 tests/cases/compiler/reactDefaultPropsInferenceSuccess.tsx:64:37: Overload 2 of 2, '(props: MyPropsProps, context?: any): FieldFeedback2<MyPropsProps>', gave the following error.
  Type '(value: string) => void' is not assignable to type '(value: string) => boolean'.
    
    // OK
    const Test5 = () => <FieldFeedback2 />;
    